--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ layout: default
 
 <style type="text/css" media="screen">
   .container {
-    margin: 10px auto;
+    margin: 120px auto;
     max-width: 600px;
     text-align: center;
   }
@@ -20,5 +20,6 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>找不到该页面。</p>
+  <p>このページは見つかりません。</p>
 </div>
