--- a/_posts/fun/2018-11-24-random-colors.html
+++ b/_posts/fun/2018-11-24-random-colors.html
@@ -43,7 +43,7 @@ layout: ""
 </head>
 <body class="rand-color">
 
-<div class="input-group" style="width: 50%">
+<div class="input-group" style="margin: 3% 0 0 5%; width: 50%">
     <input id="color-input" type="text" class="form-control" placeholder="Color">
     <button id="random-color" type="button" onclick="randomColor()" class="btn btn-success">随机颜色！</button>
     <button id="generate-color" type="button" onclick="userChangeColor()" class="btn btn-warning">生成颜色！</button>
