--- a/_posts/math/2018-11-23-analysis-cheatsheet.html
+++ b/_posts/math/2018-11-23-analysis-cheatsheet.html
@@ -266,9 +266,166 @@ math: true
     <hr>
     <h3 class="in-text-subtitle">5 黎曼积分</h3>
     <p>
-        <b>定义5.1：划分</b> 如果有$a = x_0 < x_1 < ... < x_n = b$，那么称$P = \{x_0, x_1, ..., x_n\}$是在区间$[a,b]$上的一个划分，并且，记$\Delta x_i = x_i - x_{i-1}$。对于一个在这个划分上的函数$f(x)$，记$\displaystyle m_i = \inf_{[x_{i-1}, x_i]} f(x)$，$\displaystyle M_i = \sup_{[x_{i-1}, x_i]} f(x)$。
+        <b>定义5.1：划分</b> 如果有$a = x_0 \lt x_1 \lt ... \lt x_n = b$，那么称$P = \{x_0, x_1, ..., x_n\}$是在区间$[a,b]$上的一个划分，并且，记$\Delta x_i = x_i - x_{i-1}$。对于一个在这个划分上的函数$f(x)$，记$\displaystyle m_i = \inf_{[x_{i-1}, x_i]} f(x)$，$\displaystyle M_i = \sup_{[x_{i-1}, x_i]} f(x)$。
     </p>
     <p>
         <b>定义5.2：上下达布和</b> 对于一个划分$P$，定义上达布和$\displaystyle U(P, f) = \sum_{i=1}^n M_i \Delta x_i$，和下达布和$\displaystyle L(P, f) = \sum_{i=1}^n m_i \Delta x_i$。
+    </p>
+    <p>
+        <b>定义5.3：上下积分</b> 设$P$为划分，定义上积分$\displaystyle \overline \int^b_a f = {\inf}_P U(P, f)$，下积分$\displaystyle \underline {\int}^b_a f$。
+    </p>
+    <p>
+        <b style="color: red;">定义5.3：</b><b>黎曼可积</b> 函数$f: [a,b] \to \R$是黎曼可积的，如果$f$有界并且$\displaystyle \overline \int^b_a f = \underline {\int}^b_a f = \int^b_a f$。我们称$\displaystyle \int^b_a f$为黎曼积分，并且记$\displaystyle \int^b_a f = \int^b_a f(x) dx$。如果$f$在$[a,b]$上黎曼可积，记作$f \in \mathscr{R} [a,b]$。
+    </p>
+    <p>
+        <b style="color: red;">定理5.4：</b> $f:[a,b] \to \R$是黎曼可积的充要条件是对于任意$\varepsilon > 0$，存在一个划分$P$使得$0 \le U(P, f) - L(P, f) \lt \varepsilon$。
+    </p>
+    <p>
+        <b>定义5.5：Refinement</b> 我们称$\widetilde P$是划分$P$的Refinement，如果$P \subset \widetilde P$。
+    </p>
+    <p>
+        <b>推论5.6：</b> 假设$P_1$和$P_2$是在$[a,b]$上的划分，那么$P = P_1 \cup P_2$是$P_1$和$P_2$的Refinement，并且有$L(P_1,f) \le L(P,f) \le U(P,f) \le U(P_2,f)$。
+    </p>
+    <p>
+        <b>命题5.7：</b> 如果$m \le M$，那么$m(b-a) \le L(P,f) \le U(P,f) \le M(b-a)$。
+    </p>
+    <p>
+        <b style="color: red;">定理5.8：</b> 如果$f:[a,b] \to \R$是连续的，那么它是黎曼可积的。
+    </p>
+    <p>
+        <b>推论5.9：</b> 假设$f$是连续的并且$f \ge 0$。如果$\int_a^b f = 0$，那么$f(x) = 0, \forall x$。
+    </p>
+    <p>
+        <b style="color: red;">定理5.10：</b> 如果$f:[a,b] \to \R$是单调的，那么$f$是黎曼可积的。
+    </p>
+    <p>
+        <b>定理5.11：</b> 假设$f:[a,b] \to \R$有界并且数列$a_n$单调递减，$a_n \to a$，数列$b_n$单调递增并且$b_n \to b$。如果对于所有的$n \in \N$，$f$在$[a_n, b_n]$是黎曼可积的，那么$f$在$[a,b]$上是黎曼可积的，并且$\displaystyle \int^b_a f = \lim_{n \to \infty} \int^{b_n}_{a_n} f$。
+    </p>
+    <p>
+        <b>定理5.12：</b> 如果$f$有界并且$f$有有限个间断点，那么$f$是黎曼可积的。
+    </p>
+    <p>
+        <b style="color: red;">定理5.13：微积分基本定理1 牛顿-莱布尼茨公式</b> 假设$F$在$[a,b]$上连续，并且在$(a,b)$上可导，令$f = F'$。如果$f \in \mathscr R[a,b]$，那么$\displaystyle \int^b_a f = F(b) - F(a)$。
+    </p>
+    <p>
+        <b style="color: red;">定理5.14：微积分基本定理2</b> 假设$f \in \mathscr R [a,b]$，并且$x \in [a,b]$。定义$\displaystyle F(x) = \int^x_a f$，那么$F$在$[a,b]$上连续。如果$f \in C^0[a,b]$（$C^n[a,b]$指$n$阶连续可导），那么$F$在$[a,b]$上可导，并且$F'(c) = f(c)$。
+    </p>
+    <p>
+        <b>定理5.15：换元法</b> 假设$g \in C^1[a,b]$，并且$g([a,b]) \subset [c,d]$，令$f \in C^0 [c,d]$，那么有$\displaystyle \int^b_a f(g(x)) g'(x) dx = \int^{g(b)}_{g(a)} f(s) ds$。
+    </p>
+    <p>
+        <b>定理5.16：自然对数函数</b> 存在唯一的函数$L: (0, +\infty) \to \R$，并且有以下性质：
+    </p>
+    <ol>
+        <li>
+            $L(1) = 0$；
+        </li>
+        <li>
+            $\displaystyle L'(x) = \frac{1}{x}$；
+        </li>
+        <li>
+            $L$是严格单调递增并且是双射，并且有$\displaystyle \lim_{x \to 0^+} L(x) = -\infty$，$\displaystyle \lim_{x \to \infty} L(x) = +\infty$；
+        </li>
+        <li>
+            $L(xy) = L(x) + L(y)$；
+        </li>
+        <li>
+            对于任意$q \in \Q$，有$L(x^q) = qL(x)$。
+        </li>
+    </ol>
+    <p>
+        函数$L$又能记作$\ln(x)$或$\log(x)$。
+    </p>
+    <p>
+        <b>定理5.17：自然对数函数幂级数展开</b> $\displaystyle \ln(x+1) = \sum_{k = 1}^\infty \frac{x^k}{k!}(-1)^{k-1}$。 
+    </p>
+    <p>
+        <b>定理5.18：自然指数函数</b> 存在唯一的函数$E: \R \to (0, +\infty)$，并且有以下性质：
+    </p>
+    <ol>
+        <li>
+            $E(0) = 1$；
+        </li>
+        <li>
+            $E$是双射，严格递增，并且$\displaystyle \lim_{x \to -\infty} E(x) = 0$，$\displaystyle \lim_{x \to \infty} E(x) = +\infty$；
+        </li>
+        <li>
+            $E(x+y) = E(x)E(y)$；
+        </li>
+        <li>
+            对于任意$q \in \Q$，$E(qx) = E(x)^q$。
+        </li>
+    </ol>
+    <p>
+        函数$E$又能记作$\exp(x)$。
+    </p>
+    <p>
+        <b>定义5.19：自然常数</b> 欧拉常数$e = E(1)$。并且，令$E(x) = e^x = exp(x)$等价。
+    </p>
+    <p>
+        <b>定义5.20：</b> 对于任意$x>0$和$y \in \R$，定义$x^y = \exp(y \ln x)$。
+    </p>
+    <p>
+        <b>定理5.21：自然指数函数幂级数展开</b> $\displaystyle e^x = \sum^\infty_{k = 0} \frac{x^k}{k!}$。
+    </p>
+    <p>
+        <b>定义5.22：反常积分</b> 假设$f$在所有$c \in (a,b)$黎曼可积，并且$\displaystyle \lim_{c \to b^-} \int^c_a f$存在，那么定义反常积分$\displaystyle \int^b_a f = \lim_{c \to b^-} \int^c_a f$。
+    </p>
+    <p>
+        <b>定理5.23：反常积分的p级数审敛法</b> 
+    </p>
+    <ol>
+        <li>
+            若$p \gt 1$，那么$\displaystyle \int^\infty_1 \frac{1}{x^p} dx = \frac{1}{p-1}$。
+        </li>
+        <li>
+            若$p \lt 1$，那么$\displaystyle \int^1_0 \frac{1}{x^p} dx = \frac{1}{1-p}$。
+        </li>
+    </ol>
+    <p>
+        <b>定理5.24：积分比较审敛法</b> 若$f: [a,\infty) \to \R, g : [a, \infty) \to \R$，并且对于任意的$x$，都有$|f(x)| \le g(x)$，那么
+    </p>
+    <ol>
+        <li>
+            如果$\int^\infty_a g$存在，那么$\int^\infty_a f$也存在，并且$| \int^\infty_a f | \le \int^\infty_a g$。
+        </li>
+        <li>
+            如果$\int^\infty_a f$发散，那么$\int^\infty_a g$也发散。
+        </li>
+    </ol>
+    <p>
+        <b>定理5.25：级数的积分审敛法</b> 假设$f: [k, +\infty) \to \R$非负并且单调递减。那么，$\displaystyle \sum_{n \ge k} f(n)$收敛的充要条件是$\displaystyle \int^\infty_k f$收敛，并且如果$\displaystyle \int^\infty_k f \le \infty$，有$\displaystyle \int^\infty_k f \le \sum_{n \ge k} f(n) \le f(k) + \int^\infty_k f$。
+    </p>
+    
+
+    <br><br>
+    <hr>
+    <h3 class="in-text-subtitle">6 函数列</h3>
+    <p>
+        <b>定义6.1：点收敛</b> 假设有函数列${f_n}_{n \ge 1} : S \to \R$。如果对于$f: S \to \R$，有对任意的$x \in S$，$\displaystyle \lim_{n \to \infty} f_n(x) = f(x)$，那么称$f_n$点收敛于$f$。
+    </p>
+    <p>
+        <b>定义6.2：一致收敛</b> 函数列$f_n$一致收敛于$f$，如果对于任意的$\varepsilon > 0$，都存在$N \in \N$，使得对任意的$n \ge N$和$x \in S$，有$|f_n(x) - f(x)| \lt \varepsilon$。
+    </p>
+    <p>
+        <b>定义6.3：一致范数</b> 假设$f: S \to \R$有界，定义$f$在$S$上的一致范数为$\displaystyle \|f\|_u = \|f\|_{L^\infty(S)} = \sup_{x \in S} |f(x)|$。
+    </p>
+    <p>
+        <b style="color: red;">定理6.4：一致收敛</b> 函数列$f_n$一致收敛于$f$的充要条件是$\displaystyle \lim_{n \to \infty} \|f_n - f\|_u = 0$。
+    </p>
+    <p>
+        <b>性质6.5：</b> $\|f+g\|_u \le \|f\|_u + \|g\|_u$。
+    </p>
+    <p>
+        <b>推论6.6：</b> 如果$f_n$在$S$上一致收敛于$f$，那么$f_n$在$S$上点收敛于$f$。
+    </p>
+    <p>
+        <b>定义6.7：一致柯西收敛</b> 如果有界函数列$f_n: S \to \R$有$\forall \varepsilon \gt 0, \exists N$使得对任意的$n, m \ge N$，$\|f_n - f_m\|_u \lt \varepsilon$，那么称$f_n$在$S$上一致柯西收敛。
+    </p>
+    <p>
+        <b>推论6.8：</b> 函数列一致柯西收敛的充要条件是函数列一致收敛。
+    </p>
+    <p>
+        <b>定理6.9：</b> 假设连续有界函数列$f_n: S \to \R$在$S$上一致收敛于$f$，那么$f$也是连续且有界的。
     </p>
 </div>
